bizinikiwi/pezframe/support/test/tests/pezpallet_ui/authorize_wrong_weight_info_2.stderr
error[E0220]: associated type `WeightIn` not found for `T`
  --> tests/pezpallet_ui/authorize_wrong_weight_info_2.rs:34:32
   |
34 |     #[pezpallet::call(weight = T::WeightIn)]
   |                                   ^^^^^^^^ help: there is an associated type with a similar name: `WeightInfo`
